@@ -41,6 +41,16 @@
 #include "G4VSolid.hh"
 #include "G4GeometryTolerance.hh"
 
+namespace
+{
+  const G4ThreeVector VecCartAxes[3]=
+  { G4ThreeVector(1.,0.,0.), G4ThreeVector(0.,1.,0.), G4ThreeVector(0.,0.,1.) };
+  const G4ExitNormal::ESide SideCartAxesPlus[3]=
+  { G4ExitNormal::kPX, G4ExitNormal::kPY, G4ExitNormal::kPZ };
+  const G4ExitNormal::ESide SideCartAxesMinus[3]=
+  { G4ExitNormal::kMX, G4ExitNormal::kMX, G4ExitNormal::kMX };
+}
+
 // ********************************************************************
 // Constructor
 // ********************************************************************
@@ -256,13 +266,6 @@ G4ReplicaNavigation::DistanceToOut(const G4VPhysicalVolume *pVol,
   G4double signC = 0.0;
   G4ExitNormal candidateNormal; 
    
-  static const G4ThreeVector VecCartAxes[3]=
-   { G4ThreeVector(1.,0.,0.),G4ThreeVector(0.,1.,0.),G4ThreeVector(0.,0.,1.) };
-  static G4ThreadLocal G4ExitNormal::ESide *SideCartAxesPlus = 0 ; if (!SideCartAxesPlus) {SideCartAxesPlus = new  G4ExitNormal::ESide [3] ;
-   SideCartAxesPlus[0]= G4ExitNormal::kPX;SideCartAxesPlus[1]= G4ExitNormal::kPY;SideCartAxesPlus[2]= G4ExitNormal::kPZ ;};
-  static G4ThreadLocal G4ExitNormal::ESide *SideCartAxesMinus = 0 ; if (!SideCartAxesMinus) {SideCartAxesMinus = new  G4ExitNormal::ESide [3] ;
-   SideCartAxesMinus[0]= G4ExitNormal::kMX;SideCartAxesMinus[1]= G4ExitNormal::kMY;SideCartAxesMinus[2]= G4ExitNormal::kMZ ;};
-
   pVol->GetReplicationData(axis, nReplicas, width, offset, consuming);
   switch(axis)
   {
